# linux-shell-with-rust

shell-rust/: Cargo.toml  your_program.sh
shell-rust/src/: main.rs
